<?xml version="1.0"?>
<package>
  <name>pyride_reem</name>
  <version>0.1.0</version>
  <description>PyRIDE on ROS/REEM</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="wang.xun@gmail.com">Xun Wang</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>BSD</license>


  <!-- Url tags are optional, but mutiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://wiki.ros.org/pyride_reem</url> -->


  <!-- Author tags are optional, mutiple are allowed, one per tag -->
  <!-- Authors do not have to be maintianers, but could be -->
  <!-- Example: -->
  <!-- <author email="jane.doe@example.com">Jane Doe</author> -->


  <!-- The *_depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <!-- Examples: -->
  <!-- Use build_depend for packages you need at compile time: -->
  <!-- <build_depend>message_generation</build_depend> -->
  <!-- Use buildtool_depend for build tool packages: -->
  <!--   <buildtool_depend>catkin</buildtool_depend> -->
  <!-- Use run_depend for packages you need at runtime: -->
  <!-- <run_depend>message_runtime</run_depend> -->
  <!-- Use test_depend for packages you need only for testing: -->
  <!--   <test_depend>gtest</test_depend> -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>laser_geometry</build_depend>
  <build_depend>move_base_msgs</build_depend>
  <build_depend>moveit_ros_planning_interface</build_depend>
  <build_depend>moveit_core</build_depend>
  <build_depend>moveit_msgs</build_depend>
  <build_depend>control_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>pal_interaction_msgs</build_depend>
  <build_depend>pal_navigation_msgs</build_depend>
  <build_depend>pal_device_msgs</build_depend>
  <build_depend>pal_detection_msgs</build_depend>
  <build_depend>pal_control_msgs</build_depend>
  <build_depend>pal_web_msgs</build_depend>
  <build_depend>people_msgs</build_depend>
  <build_depend>play_motion_msgs</build_depend>
  <build_depend>pyride_common_msgs</build_depend>
  <build_depend>diagnostic_msgs</build_depend>
  <build_depend>sb04_power_board</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>topic_tools</build_depend>
  <build_depend>libccrtp-dev</build_depend>
  <build_depend>libssl-dev</build_depend>
  <build_depend>python2.7-dev</build_depend>
  <build_depend>audio_file_player</build_depend>
  <build_depend>audio_stream</build_depend>
  <build_depend>async_web_server_cpp</build_depend>

  <run_depend>actionlib</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>laser_geometry</run_depend>
  <run_depend>move_base_msgs</run_depend>
  <run_depend>moveit_ros_planning_interface</run_depend>
  <run_depend>moveit_core</run_depend>
  <run_depend>moveit_msgs</run_depend>
  <run_depend>control_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>pal_interaction_msgs</run_depend>
  <run_depend>pal_navigation_msgs</run_depend>
  <run_depend>pal_device_msgs</run_depend>
  <run_depend>pal_detection_msgs</run_depend>
  <run_depend>pal_control_msgs</run_depend>
  <run_depend>pal_web_msgs</run_depend>
  <run_depend>people_msgs</run_depend>
  <run_depend>play_motion_msgs</run_depend>
  <run_depend>pyride_common_msgs</run_depend>
  <run_depend>diagnostic_msgs</run_depend>
  <run_depend>sb04_power_board</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>topic_tools</run_depend>
  <run_depend>libccrtp1-1.8-0</run_depend>
  <run_depend>libssl1.0.0</run_depend>
  <run_depend>libpython2.7</run_depend>
  <run_depend>audio_file_player</run_depend>
  <run_depend>audio_stream</run_depend>
  <run_depend>async_web_server_cpp</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- You can specify that this package is a metapackage here: -->
    <!-- <metapackage/> -->

    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
